[PIT1-45] Adds issue type column. Adds some css styling to prevent line breaks in columns

--- a/src/main/resources/css/dashboard-plugin.css
+++ b/src/main/resources/css/dashboard-plugin.css
@@ -1,7 +1,17 @@
 .aui-avatar {
-    margin-right: 5px
+    margin-right: 5px;
 }
 
 .priority-icon {
-    margin-right: 5px
+    margin-left: 1px;
+    margin-right: 5px;
+}
+
+.type-icon {
+    margin-left: 4px;
+    margin-right: 8px;
+}
+
+.container {
+    white-space: nowrap;
 }
